--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="SubActivity"></activity>
+        <activity android:name="SubActivity">
+        </activity>
 
     </application>
 </manifest>
